--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   flex-direction: column;
 }
-
+/*---------------HEADER-------------*/
 header {
   width: 100%;
   height: 100px;
@@ -28,7 +28,9 @@ header {
   color: white;
   font-family: "Sofia";
 }
+/*---------------fin HEADER-------------*/
 
+/*---------------cuerpo-------------*/
 .cuerpo {
   width: 98%;
   margin-left: 1%;
@@ -87,7 +89,8 @@ input[type=submit]:hover {
 .formulario_registro{
 text-align: center;
 }
-
+/*---------------fin cuerpo-------------*/
+/*---------------fin footer-------------*/
 footer {
   width: 100%;
   height: 100px;
