--- a/css/perfil.css
+++ b/css/perfil.css
@@ -39,41 +39,141 @@ header {
 /*--------------- cuerpo-------------*/
 
 .cuerpo {
-  width: 98%;
-  margin-left: 1%;
+  width: 92%;
+  margin-left: 4%;
   display: flex;
   flex-direction: column;
   margin-top: 10px;
 }
 
 .cuerpo_portada{
-  width: 98%;
-  margin-left: 1%;
-  height: 200px;
+  width: 92%;
   position: absolute;
-    z-index: -1;
 }
 
 .cuerpo_portada img{
   width: 100%;
-  height: 100%;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  height: 200px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  position: absolute;
   z-index: -1;
 }
 .portada_perfil{
-  width: 40%;
-  margin-left: 27%;
+  width: 150px;
+  height: 145px;
   position: absolute;
-  z-index: 2;
+  top: 120px;
+  left: 28%;
+
 }
 
 .portada_perfil img{
   width: 100%;
   height: 100%;
   border-radius: 50% ;
+  border: 5px grey solid;
 }
 
+
+.cuerpo_debajoPortada{
+  margin-top: 280px;
+  height: 200px;
+  width: 100%;
+}
+
+.cuerpo_usuario{
+  font-family: 'PT Sans', sans-serif;
+  text-align: center;
+  color: #F3F1E9;
+}
+
+
+button{
+  width: 100%;
+  background-color: #4CAF50;
+  color: #F3F1E9;
+  padding: 10px 10px;
+  margin: 15px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.cuerpo_linea{
+  width: 100%;
+  height: 1px;
+  background-color: #F3F1E9;
+}
+
+.cuerpo_informacion{
+  width: 92%;
+  margin-left: 4%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.cuerpo_informacion ul{
+  margin-left: 4%;
+}
+.cuerpo_informacion li{
+  color: #F3F1E9;
+}
+
+.cuerpo_informacion p{
+  color: #F3F1E9;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.cuerpo_archivossubidos{
+  width: 100%;
+  height: 400px;
+  margin-bottom: 15px;
+  background-color: #6D6A6A;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.archivos_perfil{
+  width: 94%;
+  margin-left: 3%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+.archivos_perfil img{
+  margin-top: 5px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.archivos_perfil h4{
+  margin-left: 10px;
+  font-size: 20px;
+  margin-top: 10px;
+  font-family: 'PT Sans', sans-serif;
+  color: #F3F1E9;
+}
+
+.archivos_contenido{
+  width: 94%;
+  margin-left: 3%;
+    height: 300px;
+
+  border: 1px #F3F1E9 solid;
+}
+
+.archivos_footer{
+  width: 94%;
+  margin-left: 3%;
+  height: 50px;
+
+}
 
 /*--------------- fin cuerpo-------------*/
 
