--- a/css/index.css
+++ b/css/index.css
@@ -72,12 +72,12 @@ input[type=submit] {
   width: 100%;
   background-color: #4CAF50;
   color: white;
-  padding: 20px 10px;
-  margin: 15px 0;
+  padding: 30px 10px;
+  margin: 10px 0;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin-left: 10px;
+  font-size: 17px;
 }
 
 
