--- a/css/index.css
+++ b/css/index.css
@@ -80,6 +80,18 @@ input[type=submit] {
   font-size: 17px;
 }
 
+button{
+  width: 100%;
+  height: 70px;
+  background-color: #4CAF50;
+  color: #F3F1E9;
+  padding: 10px 10px;
+  margin: 15px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
 
 input[type=submit]:hover {
   background-color: #45a049;
