--- a/css/perfil.css
+++ b/css/perfil.css
@@ -14,10 +14,11 @@ header {
   height: 50px;
   background-color: black;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .header_titulo {
+  width: 50%;
   text-align: left;
   margin-left: 30px;
   font-size: 10px;
@@ -35,6 +36,17 @@ header {
   color: white;
 }
 
+header h2{
+  margin-left: 25%;
+  margin-top: 15px;
+  font-size: 20px;
+  text-align: right;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+}
 /*---------------fin HEADER-------------*/
 /*--------------- cuerpo-------------*/
 
@@ -176,25 +188,25 @@ button{
 
 }
 
-/*--------------- fin cuerpo-------------*/
 
-/*--------------- footer-----------------*/
-
-footer {
-  width: 100%;
-  height: 100px;
+.cuerpo_editarportada{
   margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-
-}
-
-.footer_legenda{
+  margin-bottom: 20px;
   text-align: center;
-  margin-top: 40px;
+  color: #F3F1E9;
+  font-size: 10px;
 }
 
-.footer_legenda h5{
-  color: white;
-  font-size: 12px;
+.cuerpo_botonesDeEdicion{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
+
+.cuerpo_botonesDeEdicion button{
+  font-size: 18px;
+  margin-left: 10px;
+}
+
+/*--------------- fin cuerpo-------------*/
