--- a/css/perfil.css
+++ b/css/perfil.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   flex-direction: column;
 }
+
 /*---------------HEADER-------------*/
 header {
   width: 100%;
@@ -30,26 +31,36 @@ header {
   font-family: "Sofia";
 }
 
-.header_titulo h1 a
- {
+.header_titulo h1 a {
   text-decoration: none;
   color: white;
 }
 
-header h2{
+header h2 {
   margin-left: 25%;
   margin-top: 15px;
   font-size: 20px;
   text-align: right;
 }
 
-a{
+a {
   text-decoration: none;
   color: white;
 }
+
+.header_perfil{
+  margin-top: 5px;
+  margin-left: 25%;
+}
+
+.header_perfil img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
 /*---------------fin HEADER-------------*/
 /*--------------- cuerpo-------------*/
-
 .cuerpo {
   width: 92%;
   margin-left: 4%;
@@ -58,12 +69,12 @@ a{
   margin-top: 10px;
 }
 
-.cuerpo_portada{
+.cuerpo_portada {
   width: 92%;
   position: absolute;
 }
 
-.cuerpo_portada img{
+.cuerpo_portada img {
   width: 100%;
   height: 200px;
   border-top-left-radius: 20px;
@@ -71,37 +82,66 @@ a{
   position: absolute;
   z-index: -1;
 }
-.portada_perfil{
+
+.cuerpo_publicacion{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+.publicacion_texto{
+  width: 80%;
+  margin-top: 5px;
+}
+
+.publicacion_texto input{
+  width: 100%;
+  height: 30px;
+  border-radius: 8px;
+  border: 1px #6D6A6A solid;
+}
+
+
+.publicacion_foto{
+  margin-right: 15px;
+}
+
+
+.publicacion_foto img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.portada_perfil {
   width: 150px;
   height: 145px;
   position: absolute;
   top: 120px;
   left: 28%;
-
 }
 
-.portada_perfil img{
+.portada_perfil img {
   width: 100%;
   height: 100%;
-  border-radius: 50% ;
+  border-radius: 50%;
   border: 5px grey solid;
 }
 
-
-.cuerpo_debajoPortada{
+.cuerpo_debajoPortada {
   margin-top: 280px;
   height: 200px;
   width: 100%;
 }
 
-.cuerpo_usuario{
+.cuerpo_usuario {
   font-family: 'PT Sans', sans-serif;
   text-align: center;
   color: #F3F1E9;
 }
 
-
-button{
+button {
   width: 100%;
   background-color: #4CAF50;
   color: #F3F1E9;
@@ -113,13 +153,13 @@ button{
   font-size: 16px;
 }
 
-.cuerpo_linea{
+.cuerpo_linea {
   width: 100%;
   height: 1px;
   background-color: #F3F1E9;
 }
 
-.cuerpo_informacion{
+.cuerpo_informacion {
   width: 92%;
   margin-left: 4%;
   display: flex;
@@ -127,20 +167,21 @@ button{
   margin-top: 10px;
 }
 
-.cuerpo_informacion ul{
+.cuerpo_informacion ul {
   margin-left: 4%;
 }
-.cuerpo_informacion li{
+
+.cuerpo_informacion li {
   color: #F3F1E9;
 }
 
-.cuerpo_informacion p{
+.cuerpo_informacion p {
   color: #F3F1E9;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-.cuerpo_archivossubidos{
+.cuerpo_archivossubidos {
   width: 100%;
   height: 400px;
   margin-bottom: 15px;
@@ -150,7 +191,7 @@ button{
   flex-direction: column;
 }
 
-.archivos_perfil{
+.archivos_perfil {
   width: 94%;
   margin-left: 3%;
   height: 50px;
@@ -158,14 +199,14 @@ button{
   flex-direction: row;
 }
 
-.archivos_perfil img{
+.archivos_perfil img {
   margin-top: 5px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
 }
 
-.archivos_perfil h4{
+.archivos_perfil h4 {
   margin-left: 10px;
   font-size: 20px;
   margin-top: 10px;
@@ -173,23 +214,21 @@ button{
   color: #F3F1E9;
 }
 
-.archivos_contenido{
+.archivos_contenido {
   width: 94%;
   margin-left: 3%;
-    height: 300px;
-
+  height: 300px;
   border: 1px #F3F1E9 solid;
+  border-radius: 10px;
 }
 
-.archivos_footer{
+.archivos_footer {
   width: 94%;
   margin-left: 3%;
   height: 50px;
-
 }
 
-
-.cuerpo_editarportada{
+.cuerpo_editarportada {
   margin-top: 20px;
   margin-bottom: 20px;
   text-align: center;
@@ -197,14 +236,14 @@ button{
   font-size: 10px;
 }
 
-.cuerpo_botonesDeEdicion{
+.cuerpo_botonesDeEdicion {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.cuerpo_botonesDeEdicion button{
+.cuerpo_botonesDeEdicion button {
   font-size: 18px;
   margin-left: 10px;
 }
