--- a/css/perfil.css
+++ b/css/perfil.css
@@ -88,11 +88,15 @@ a {
   height: 50px;
   display: flex;
   flex-direction: row;
+  background-color: #6D6A6A;
+  margin-bottom: 15px;
+  border-radius: 10px;
 }
 
 .publicacion_texto{
-  width: 80%;
-  margin-top: 5px;
+  width: 73%;
+  margin-top: 8px;
+  margin-left: 5px;
 }
 
 .publicacion_texto input{
@@ -100,11 +104,15 @@ a {
   height: 30px;
   border-radius: 8px;
   border: 1px #6D6A6A solid;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 
 .publicacion_foto{
   margin-right: 15px;
+  margin-left: 10px;
+  margin-top: 5px;
 }
 
 
