--- a/css/perfil.css
+++ b/css/perfil.css
@@ -93,21 +93,26 @@ a {
   border-radius: 10px;
 }
 
+
 .publicacion_texto{
   width: 73%;
   margin-top: 8px;
   margin-left: 5px;
 }
 
-.publicacion_texto input{
+
+.publicacion_texto input[type=text]{
   width: 100%;
   height: 30px;
   border-radius: 8px;
-  border: 1px #6D6A6A solid;
+  border: 1px white solid;
   padding-left: 10px;
   padding-right: 10px;
+  background-color: #6D6A6A;
 }
-
+.publicacion_texto input::placeholder{
+color:white;
+}
 
 .publicacion_foto{
   margin-right: 15px;
@@ -121,6 +126,62 @@ a {
   height: 40px;
   border-radius: 50%;
 }
+
+.cuerpo_publicacion2{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #6D6A6A;
+  margin-bottom: 15px;
+  border-radius: 10px;
+}
+
+.cuerpo_publicacion2Titutlo h1{
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+
+
+.publicacion2_formulario textarea{
+  width: 94%;
+  height: 200px;
+  border-radius: 8px;
+  color: white;
+  background-color: #6D6A6A;
+  padding: 10px;
+}
+.publicacion2_formulario textarea::placeholder{
+color:white;
+}
+
+
+.cuerpo_publicacionPerfil{
+width: 100%;
+display: flex;
+flex-direction: row;
+height: 60px;
+}
+
+.cuerpo_publicacionPerfil img{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-top: 7px;
+  margin-left: 10px;
+}
+
+.cuerpo_publicacionPerfil h1{
+  font-size: 20px;
+  color: white;
+  margin-top: 13px;
+  margin-left: 15px;
+  font-weight: normal;
+}
+
 
 .portada_perfil {
   width: 150px;
